--- a/src/app/pages/map/map-result/map-result.component.html
+++ b/src/app/pages/map/map-result/map-result.component.html
@@ -20,14 +20,14 @@
     </ion-buttons>
   </ion-toolbar>
 
-  <div class="maptab" *ngIf="viewTemplate == 'ShowByType'">
+  <!-- <div class="maptab" *ngIf="viewTemplate == 'ShowByType'">
     <ion-button shape="round" [ngClass]="{'active':viewType == 1}" (click)="onViewTypeChange(1)">
       Show by type
     </ion-button>
     <ion-button shape="round" [ngClass]="{'active':viewType == 2}" (click)="onViewTypeChange(2)">
       Arrange by distance
     </ion-button>
-  </div>
+  </div> -->
 </ion-header>
 <ion-content>
   <ion-accordion-group multiple="true"
@@ -47,27 +47,50 @@
                 <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
                   onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
                   alt="User Profile"> -->
-                <img class="user-logo-main" src="{{appConstants.mediaPrefix + user['ProfileImage']}}"
+                <img class="user-logo-main"
+                  src="{{appConstants.mediaPrefix + user['ProfileImage']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
-              <div class="font-primary-text" (click)="viewConnection(user)">
-                <span class="font-sz-14">{{user['FirstName']}}{{user['LastName']}}</span>
+              <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;"
+              class="font-primary-text" (click)="viewConnection(user)">
+              <div style="display: flex; align-items: center; padding-right: 10px;">
+                  <p style="font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) 18px/21px var(--unnamed-font-family-sf-pro-display);
+                      color: var(--unnamed-color-285078);
+                      text-align: left;
+                      font: normal normal 600 18px/21px SF Pro Display;
+                      letter-spacing: 0.29px;
+                      color: #285078;
+                      opacity: 1;"
+                      class="font-sz-14">
+                      {{user['FirstName']}} {{user['LastName']}}
+                  </p>
               </div>
+              <div style="display: flex; align-items: center;">
+                  <ion-icon name="chat-3dots"></ion-icon>
+              </div>
+          </div>
+          
+
             </div>
             <div class="display-flex--row flex-align-center">
               <!-- <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">{{user['RangeInKm']| number
                 : '1.2-2' }} Miles away 
               </div> -->
               <div class="font-primary-text" (click)="viewConnection(user)">
-                <span class="font-sz-14">{{user['TotalPosts']}} Posts - {{user['TotalConnections']}} Connections</span>
+                <span class="font-sz-14">{{user['TotalPosts']}} Posts -
+                  {{user['TotalConnections']}} Connections</span>
               </div>
               <div class="action-list">
                 <!-- <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon> -->
-                <greeting-view [fromUserId]="user['UserId']" [fromUserName]="user['DisplayName']"
-                  [fromUserProfile]="'/' + user['ProfilePhoto']" [userInfo]="user"></greeting-view>
+                <ion-icon name="human"></ion-icon>
+                <greeting-view [fromUserId]="user['UserId']"
+                  [fromUserName]="user['DisplayName']"
+                  [fromUserProfile]="'/' + user['ProfilePhoto']"
+                  [userInfo]="user"></greeting-view>
 
                 <div class="req-icon">
-                  <ion-icon *ngIf="user['IsConnected'] === false" name="free-user-request-white-icon"
+                  <ion-icon *ngIf="user['IsConnected'] === false"
+                    name="free-user-request-white-icon"
                     style="font-size: 36px;" (click)="blockUser()"></ion-icon>
                 </div>
 
@@ -94,7 +117,8 @@
                 <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
                   onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
                   alt="User Profile"> -->
-                <img class="user-logo-main" src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
+                <img class="user-logo-main"
+                  src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
               <div class="font-primary-text" (click)="viewBusiness(user)">
@@ -103,13 +127,17 @@
             </div>
 
             <div class="display-flex--row flex-align-center">
-              <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">{{user['RangeInKm']|
+              <div class="font-secoundry-text font-sz-12"
+                style="width: 100%;text-align: center;">{{user['RangeInKm']|
                 number
                 : '1.2-2' }} Miles away </div>
               <div class="action-list">
-                <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon>
-                <ion-button (click)="startChat(user)" shape="round" size="small" class="primary-button">
-                  <ion-icon name="chat" class="icon-40" (click)="startChat(user)"></ion-icon>
+                <ion-icon name="view-on-map" style="font-size: 36px;"
+                  (click)="viewUserOnMap(user)"></ion-icon>
+                <ion-button (click)="startChat(user)" shape="round" size="small"
+                  class="primary-button">
+                  <ion-icon name="chat" class="icon-40"
+                    (click)="startChat(user)"></ion-icon>
                   Chat now
                 </ion-button>
               </div>
@@ -133,7 +161,8 @@
                 <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
                   onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
                   alt="User Profile"> -->
-                <img class="user-logo-main" src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
+                <img class="user-logo-main"
+                  src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
               <div class="font-primary-text" (click)="viewBusiness(user)">
@@ -142,13 +171,17 @@
             </div>
 
             <div class="display-flex--row flex-align-center">
-              <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">{{user['RangeInKm']|
+              <div class="font-secoundry-text font-sz-12"
+                style="width: 100%;text-align: center;">{{user['RangeInKm']|
                 number
                 : '1.2-2' }} Miles away </div>
               <div class="action-list">
-                <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon>
-                <ion-button (click)="startChat(user)" shape="round" size="small" class="primary-button">
-                  <ion-icon name="chat" class="icon-40" (click)="startChat(user)"></ion-icon>
+                <ion-icon name="view-on-map" style="font-size: 36px;"
+                  (click)="viewUserOnMap(user)"></ion-icon>
+                <ion-button (click)="startChat(user)" shape="round" size="small"
+                  class="primary-button">
+                  <ion-icon name="chat" class="icon-40"
+                    (click)="startChat(user)"></ion-icon>
                   Chat now
                 </ion-button>
               </div>
@@ -172,7 +205,8 @@
                 <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
                   onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
                   alt="User Profile"> -->
-                <img class="user-logo-main" src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
+                <img class="user-logo-main"
+                  src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
               <div class="font-primary-text" (click)="viewConnection(user)">
@@ -181,14 +215,18 @@
             </div>
 
             <div class="display-flex--row flex-align-center">
-              <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">{{user['RangeInKm']|
+              <div class="font-secoundry-text font-sz-12"
+                style="width: 100%;text-align: center;">{{user['RangeInKm']|
                 number
                 : '1.2-2' }} Miles away </div>
               <div class="action-list">
-                <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon>
-                <greeting-view [fromUserId]="user['UserId']" [fromUserName]="user['DisplayName']"
+                <ion-icon name="view-on-map" style="font-size: 36px;"
+                  (click)="viewUserOnMap(user)"></ion-icon>
+                <greeting-view [fromUserId]="user['UserId']"
+                  [fromUserName]="user['DisplayName']"
                   [fromUserProfile]="'/' + user['ProfilePhoto']"></greeting-view>
-                <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon>
+                <ion-icon name="chat-ignore" style="font-size: 36px;"
+                  (click)="blockUser()"></ion-icon>
                 <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
               </div>
             </div>
@@ -211,7 +249,8 @@
                 <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
                   onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
                   alt="User Profile"> -->
-                <img class="user-logo-main" src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
+                <img class="user-logo-main"
+                  src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
               <div class="font-primary-text" (click)="viewConnection(user)">
@@ -220,14 +259,18 @@
             </div>
 
             <div class="display-flex--row flex-align-center">
-              <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">{{user['RangeInKm']|
+              <div class="font-secoundry-text font-sz-12"
+                style="width: 100%;text-align: center;">{{user['RangeInKm']|
                 number
                 : '1.2-2' }} Miles away </div>
               <div class="action-list">
-                <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon>
-                <greeting-view [fromUserId]="user['UserId']" [fromUserName]="user['DisplayName']"
+                <ion-icon name="view-on-map" style="font-size: 36px;"
+                  (click)="viewUserOnMap(user)"></ion-icon>
+                <greeting-view [fromUserId]="user['UserId']"
+                  [fromUserName]="user['DisplayName']"
                   [fromUserProfile]="'/' + user['ProfilePhoto']"></greeting-view>
-                <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon>
+                <ion-icon name="chat-ignore" style="font-size: 36px;"
+                  (click)="blockUser()"></ion-icon>
                 <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
               </div>
             </div>
@@ -250,7 +293,8 @@
                 <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
                   onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
                   alt="User Profile"> -->
-                <img class="user-logo-main" src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
+                <img class="user-logo-main"
+                  src="{{appConstants.mediaPrefix + user['ProfilePhoto']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
               <div class="font-primary-text" (click)="viewConnection(user)">
@@ -259,14 +303,18 @@
             </div>
 
             <div class="display-flex--row flex-align-center">
-              <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">{{user['RangeInKm']|
+              <div class="font-secoundry-text font-sz-12"
+                style="width: 100%;text-align: center;">{{user['RangeInKm']|
                 number
                 : '1.2-2' }} Miles away </div>
               <div class="action-list">
-                <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon>
-                <greeting-view [fromUserId]="user['UserId']" [fromUserName]="user['DisplayName']"
+                <ion-icon name="view-on-map" style="font-size: 36px;"
+                  (click)="viewUserOnMap(user)"></ion-icon>
+                <greeting-view [fromUserId]="user['UserId']"
+                  [fromUserName]="user['DisplayName']"
                   [fromUserProfile]="'/' + user['ProfilePhoto']"></greeting-view>
-                <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon>
+                <ion-icon name="chat-ignore" style="font-size: 36px;"
+                  (click)="blockUser()"></ion-icon>
                 <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
               </div>
             </div>
@@ -289,7 +337,8 @@
                 <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
                   onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
                   alt="User Profile"> -->
-                <img class="user-logo-main" src="{{appConstants.mediaPrefix + user['Image']}}"
+                <img class="user-logo-main"
+                  src="{{appConstants.mediaPrefix + user['Image']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
               <div class="font-primary-text" (click)="viewConnection(user)">
@@ -298,14 +347,18 @@
             </div>
 
             <div class="display-flex--row flex-align-center">
-              <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">{{user['RangeInKm']|
+              <div class="font-secoundry-text font-sz-12"
+                style="width: 100%;text-align: center;">{{user['RangeInKm']|
                 number
                 : '1.2-2' }} Miles away </div>
               <div class="action-list">
-                <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon>
-                <greeting-view [fromUserId]="user['UserId']" [fromUserName]="user['DisplayName']"
+                <ion-icon name="view-on-map" style="font-size: 36px;"
+                  (click)="viewUserOnMap(user)"></ion-icon>
+                <greeting-view [fromUserId]="user['UserId']"
+                  [fromUserName]="user['DisplayName']"
                   [fromUserProfile]="'/' + user['ProfilePhoto']"></greeting-view>
-                <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon>
+                <ion-icon name="chat-ignore" style="font-size: 36px;"
+                  (click)="blockUser()"></ion-icon>
                 <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
               </div>
             </div>
@@ -328,7 +381,8 @@
                 <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
                   onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
                   alt="User Profile"> -->
-                <img class="user-logo-main" src="{{appConstants.mediaPrefix + user['ProfileImage']}}"
+                <img class="user-logo-main"
+                  src="{{appConstants.mediaPrefix + user['ProfileImage']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
               <div class="font-primary-text" (click)="viewConnection(user)">
@@ -337,14 +391,18 @@
             </div>
 
             <div class="display-flex--row flex-align-center">
-              <div class="font-secoundry-text font-sz-12" style="width: 100%;text-align: center;">{{user['RangeInKm']|
+              <div class="font-secoundry-text font-sz-12"
+                style="width: 100%;text-align: center;">{{user['RangeInKm']|
                 number
                 : '1.2-2' }} Miles away </div>
               <div class="action-list">
-                <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon>
-                <greeting-view [fromUserId]="user['UserId']" [fromUserName]="user['DisplayName']"
+                <ion-icon name="view-on-map" style="font-size: 36px;"
+                  (click)="viewUserOnMap(user)"></ion-icon>
+                <greeting-view [fromUserId]="user['UserId']"
+                  [fromUserName]="user['DisplayName']"
                   [fromUserProfile]="'/' + user['ProfilePhoto']"></greeting-view>
-                <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon>
+                <ion-icon name="chat-ignore" style="font-size: 36px;"
+                  (click)="blockUser()"></ion-icon>
                 <!-- <ion-icon name="no-profile" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
               </div>
             </div>
@@ -367,7 +425,8 @@
                 <!-- <img animation="gradient" src="attachmentURL + '/' + user['ProfilePhoto']"
                   onerror="this.onerror=null;this.src='https://ionicframework.com/docs/img/demos/avatar.svg';"
                   alt="User Profile"> -->
-                <img class="user-logo-main" src="{{appConstants.mediaPrefix + user['ProfileImage']}}"
+                <img class="user-logo-main"
+                  src="{{appConstants.mediaPrefix + user['ProfileImage']}}"
                   onError="this.src='assets/icons/business/anonymous.svg'" />
               </ion-avatar>
               <div class="font-primary-text" (click)="viewConnection(user)">
@@ -381,8 +440,10 @@
                 : '1.2-2' }} Miles away 
               </div> -->
               <div class="action-list">
-                <ion-icon name="view-on-map" style="font-size: 36px;" (click)="viewUserOnMap(user)"></ion-icon>
-                <greeting-view [fromUserId]="user['UserId']" [fromUserName]="user['FirstName']"
+                <ion-icon name="view-on-map" style="font-size: 36px;"
+                  (click)="viewUserOnMap(user)"></ion-icon>
+                <greeting-view [fromUserId]="user['UserId']"
+                  [fromUserName]="user['FirstName']"
                   [fromUserProfile]="'/' + user['ProfilePhoto']">
                 </greeting-view>
                 <!-- <ion-icon name="chat-ignore" style="font-size: 36px;" (click)="blockUser()"></ion-icon> -->
